crates/arky-tools-macros/tests/ui/invalid_attr_args.stderr
error: #[tool] does not accept attribute arguments
 --> tests/ui/invalid_attr_args.rs:3:8
  |
3 | #[tool(name = "custom")]
  |        ^^^^^^^^^^^^^^^
